Création d'un Store avec une recherche dédié - Fix la page dépot d'annonce

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -116,7 +116,7 @@
     <script src="{{ asset('assets/js/aos.js') }}"></script>
     <script src="{{ asset('assets/js/jquery.animateNumber.min.js') }}"></script>
     <script src="{{ asset('assets/js/scrollax.min.js') }}"></script>
-    <script src="{{ asset('assets/js/google-map.js') }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
     <script src="{{ asset('assets/js/main.js') }}"></script>
 
     <script src="https://kit.fontawesome.com/310dd10bf3.js" crossorigin="anonymous"></script>
