--- a/public/assets/css/nouislider.css
+++ b/public/assets/css/nouislider.css
@@ -123,7 +123,7 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
     border-radius: 3px;
 }
 .noUi-connect {
-    background: #3FB8AF;
+    background: #206dfb;
 }
 /* Handles and cursors;
  */
