--- a/templates/front/annonce.html.twig
+++ b/templates/front/annonce.html.twig
@@ -291,7 +291,7 @@
                                 <div class="media">
                                     <div class="media-body">
                                         <h5 class="mt-0">{{ annonce.dealerName }}</h5>
-                                        <h6 class="font-weight-medium"><a href="">{{ dealerAnnonce|length }} annonces en lignes</a></h6>
+                                        <h6 class="font-weight-medium"><a href="{{ path('dealer_store', { 'dealer_id': annonces[0].dealer_id}) }}" data-toggle="tooltip" data-placement="top" title="Voir la boutique">{{ annonces|length }} annonces en lignes</a></h6>
                                     </div>
                                 </div>
                             </div>
@@ -332,20 +332,20 @@
                         <h3 class="heading-3">Annonces récents</h3>
 
 
-                        {# {% for annonce in annonces %}
+                        {% for annonce in annonces %}
                          <div class="block-21 mb-4 d-flex">
                              <a class="blog-img mr-4" style="background-image: url({% if annonce.image[0].url is iterable %}{{ annonce.image[0].url[0] }}{% else %} {{ annonce.image[0].url }} {% endif %});"></a>
                              <div class="text">
                                  <h3 class="heading"><a href="#">{{ annonce.title }}</a>
                                  </h3>
                                  <div class="meta">
-                                     <div><a href="#"><span class="icon-calendar"></span> July 12, 2018</a></div>
-                                     <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                                     <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+                                     <div><a href="{{ path('annonces', { 'minKilometer': annonce.mileage['value']}) }}"><{% if annonce.mileage['value'] is not empty %}i class="fas fa-road "></i> {{ annonce.mileage['value'] | number_format(0,'',' ') }} km{% else %} Non spécifié*{% endif %}</a></div>
+                                     <div><a href="{{ path('annonces', { 'transmission' : annonce.transmission|lower}) }}">{% if annonce.transmission is not empty %}<i class="fas fa-road "></i> {{ annonce.transmission }}{% else %} Non spécifié*{% endif %}</a></div>
+                                     <div><a href="{{ path('annonces', { 'minYear' : annonce.year, 'maxYear': annonce.year}) }}">{% if annonce.year is not empty %}<i class="fas fa-calendar "></i> {{ annonce.year }}{% else %} Non spécifié*{% endif %}</a></div>
                                  </div>
                              </div>
                          </div>
-                     {% endfor %}#}
+                     {% endfor %}
 
 
                     </div>
@@ -358,6 +358,7 @@
 {% endblock %}
 
 {% block javascripts %}
+
     {{ parent() }}
 
     <script src="{{ asset('assets/js/swiper.min.js') }}"></script>
@@ -393,12 +394,10 @@
                 .done(function (data) {
                     $('#model-select').empty();
                     data.forEach((element) => {
-                        $('#model-select')
-                            .append(`<option value="${element.model.toLowerCase()}">${element.model}</option>`);
-                        console.log(element.model)
+                        $('#model-select').append(`<option value="${element.model.toLowerCase()}">${element.model}</option>`);
                     });
 
                 })
-            ;
+        });
     </script>
 {% endblock %}
