--- a/templates/front/dealer.twig
+++ b/templates/front/dealer.twig
@@ -11,7 +11,8 @@
 
 
 
-    <div class="hero-wrap hero-wrap-2" style="background-image: url({{ asset('assets/images/bg.jpg') }});background-position: 50% 85%;"
+    <div class="hero-wrap hero-wrap-2"
+         style="background-image: url({{ asset('assets/images/bg.jpg') }});background-position: 50% 85%;"
          data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
@@ -19,19 +20,40 @@
                 <div class="col-md-12 ftco-animate text-center mb-5">
                     <p class="breadcrumbs mb-0"><span class="mr-3"><a href="index.html">Accueil <i
                                         class="ion-ios-arrow-forward"></i></a></span> <span>Annonces</span></p>
-                    <h1 class="mb-3 bread">Trouver une annonce</h1>
+                    <h1 class="mb-3 bread">Store</h1>
                 </div>
             </div>
         </div>
     </div>
-
+    <div id="presentation 0" class="py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="media">
+                        <img src="https://via.placeholder.com/50" class="align-self-start mr-3 img-thumbnail" alt="...">
+                        <div class="media-body">
+                            <h5 class="mt-0">{{ annonces[0].dealerName }}</h5>
+                            <h6></h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="d-flex d-lg-none mt-3 p-3">
+        <button class="btn btn-outline-primary btn-round" id="showFilter">
+            Filtre
+        </button>
+    </div>
     <section class="ftco-section bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 sidebar">
-                    <div class="sidebar-box bg-white p-4 ftco-animate">
-                        <h3 class="heading-sidebar">Chercher par critères</h3>
-                        <div class="border-0 rounded-0 bg-white sticky-top js-filter" id="filtre">
+                    <div id="filtre" class="sidebar-box bg-white p-4 ftco-animate modal sticky-top"
+                         style="border-top: 4px #206dfb solid;border-top-right-radius: 4px;border-top-left-radius: 4px;">
+
+                        <div class="border-0 rounded-0 bg-white  js-filter pt-5 pt-lg-0">
+                            <h3 class="heading-sidebar mt-5 mt-lg-0">Chercher par critères</h3>
                             <div class="d-lg-none mb-3 sticky-top bg-white">
                                 <button class="btn btn-outline-main btn-sm btn-round" id="closeFilter" type="button"><i
                                             class="fas fa-chevron-left mr-3"></i>retour
@@ -46,12 +68,12 @@
                             <div class="form-group">
                                 {{ form_label(form.make, "Recherche par marque") }}
                                 {{ form_errors(form.model) }}
-                                {{ form_widget(form.make) }}
+                                {{ form_widget(form.make, {'attr': {'class': 'selectpicker ', 'id': 'make-filter', 'data-live-search': true}}) }}
                             </div>
                             <div class="form-group">
                                 {{ form_label(form.model, "Recherche par marque") }}
                                 {{ form_errors(form.model) }}
-                                {{ form_widget(form.model) }}
+                                {{ form_widget(form.model, {'attr': {'id':'model-select'}}) }}
                             </div>
                             <div class="form-group">
                                 {{ form_label(form.bodyStyle, "Catégorie") }}
@@ -88,7 +110,8 @@
                                     {{ form_widget(form.maxPrice, { 'attr': { 'class': ' ml-1 w-50', 'title': "Prix maximun" }}) }}
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary btn-block"><i class="fas fa-search mr-2"></i>
+                            <button type="submit" class="btn btn-primary btn-block" style="padding: 1rem 0.75rem"><i
+                                        class="fas fa-search mr-2"></i>
                                 Chercher
                             </button>
 
@@ -112,7 +135,7 @@
                                                  alt="Image de {{ annonce.make }} {{ annonce.model }}">
                                         </div>
                                         <div class="d-flex flex-column align-content-around bg-white py-2 px-2 w-100 text-truncate">
-                                            <a class="list-annonce-title"
+                                            <a class="list-annonce-title font-weight-medium"
                                                href="{{ path('annonce', {'slug': annonce.slug }) }}"
                                                title="Voir cette annonce : {{ annonce.make }} - {{ annonce.model }}">{{ annonce.title }}</a><span
                                                     class=" list-annonce-price mb-auto font-weight-bold">{{ annonce.price | number_format(0,'.','.') }} €</span>
@@ -125,7 +148,7 @@
                                                     </div>
                                                     <div class="col-6 text-right text-truncate">
                                                         <a class="list-annonce-entity"
-                                                           href="#">{{ annonce.dealerName|capitalize }}</a>
+                                                           href="{{ path('dealer_store', { 'dealer_id' : annonce.dealerId }) }}">{{ annonce.dealerName|capitalize }}</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -163,6 +186,7 @@
             </div>
         </div>
     </section>
+    <a href="#top"><i class="fa fa-arrow-up"></i></a>
 
 {% endblock %}
 
@@ -170,6 +194,29 @@
     {{ parent() }}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.0.3/nouislider.js"></script>
     <script>
+
+
+        $(document).ready(() => {
+
+            checkIfMobile($(window).width());
+        });
+
+        $(window).resize(() => {
+            checkIfMobile($(this).width())
+        });
+
+        function checkIfMobile(windowWidth) {
+
+            if (windowWidth >= 992) {
+                console.log('oui')
+                $('#filtre').removeClass('modal');
+            } else {
+                console.log('laa')
+                $('#filtre').addClass('modal');
+            }
+        }
+
+
         const sliderPrice = document.getElementById('sliderPrice');
 
         if (sliderPrice) {
@@ -237,20 +284,46 @@
             })
         });
 
+        /*
+        * Récupèrer la liste des modèles d'une marque lorsqu'on fait une recherche et récupère une recherche
+        * */
+        fetchModelByMake($('#make').val());
+
+        $('#make').on('changed.bs.select', function (e, clickedIndex, isSelected, previousValue) {
+            fetchModelByMake(this.value);
+        });
+
+        function fetchModelByMake(value) {
+            $.post('{{ path('api_fetchModelByMake') }}', {make: value, dealer_id: {{ annonces[0].dealerId }}})
+                .done(function (data) {
+                    $('#model').empty();
+                    data.forEach((element) => {
+                        $('#model')
+                            .append(`<option value="${element.model.toLowerCase()}">${element.model}</option>`);
+                        console.log(element.model)
+                    });
+
+                })
+            ;
+        }
+
+        var modal = $('#filtre');
+
+        var openModal = $('#showFilter');
+
+        var closeModal = $('#closeFilter');
+
+        openModal.click(() => {
+            modal.show();
+        });
 
 
-
-
+        closeModal.click(() => {
+            modal.hide();
+        });
 
 
     </script>
 
-    <script src="{{ asset('assets/js/Filter.js') }}"></script>
-    <script>
-
-        filter = new Filter( document.querySelector('.js-filter'));
-
-
-    </script>
 
 {% endblock %}
