--- a/templates/front/dealer.twig
+++ b/templates/front/dealer.twig
@@ -195,7 +195,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.0.3/nouislider.js"></script>
     <script>
 
-
+        let UP_LG_SIZE = 992;
         $(document).ready(() => {
 
             checkIfMobile($(window).width());
@@ -207,7 +207,7 @@
 
         function checkIfMobile(windowWidth) {
 
-            if (windowWidth >= 992) {
+            if (windowWidth >= UP_LG_SIZE) {
                 console.log('oui')
                 $('#filtre').removeClass('modal');
             } else {
@@ -287,20 +287,21 @@
         /*
         * Récupèrer la liste des modèles d'une marque lorsqu'on fait une recherche et récupère une recherche
         * */
-        fetchModelByMake($('#make').val());
-
         $('#make').on('changed.bs.select', function (e, clickedIndex, isSelected, previousValue) {
             fetchModelByMake(this.value);
+
         });
 
         function fetchModelByMake(value) {
-            $.post('{{ path('api_fetchModelByMake') }}', {make: value, dealer_id: {{ annonces[0].dealerId }}})
+            $.post('{{ path('api_fetchModelByMake') }}', {make: value, dealer_id: {{ annonces[0].dealerId }}, state: 'xxx'})
                 .done(function (data) {
+                    console.table(data);
                     $('#model').empty();
                     data.forEach((element) => {
+                        $item = element.model ? element.model : element;
                         $('#model')
-                            .append(`<option value="${element.model.toLowerCase()}">${element.model}</option>`);
-                        console.log(element.model)
+                            .append(`<option value="${$item.toLowerCase()}">${$item}</option>`);
+                        console.log(element)
                     });
 
                 })
