--- a/templates/front/recherche.twig
+++ b/templates/front/recherche.twig
@@ -284,25 +284,51 @@
         /*
         * Récupèrer la liste des modèles d'une marque lorsqu'on fait une recherche et récupère une recherche
         * */
-        fetchModelByMake($('#make').val());
+        $(document).ready(() => {
+            fetchModelByMake($('#make').val());
+
+
+        });
 
         $('#make').on('changed.bs.select', function (e, clickedIndex, isSelected, previousValue) {
             fetchModelByMake(this.value);
         });
 
         function fetchModelByMake(value) {
-            $.post('{{ path('api_fetchModelByMake') }}', {make: value, dealer_id: ""})
+            $.post('{{ path('api_fetchModelByMake') }}', {make: value, state: 'all'})
                 .done(function (data) {
+                    console.table(data);
                     $('#model').empty();
                     data.forEach((element) => {
+                        $item = element.model ? element.model : element;
                         $('#model')
-                            .append(`<option value="${element.model.toLowerCase()}">${element.model}</option>`);
-                        console.log(element.model)
-                    });
+                            .append(`<option value="${$item.toLowerCase()}">${$item}</option>`);
 
+                    });
+                    {#
+                    Fixe le menu SELECT qui ne focus pas sur la bonne valeur; par rapport à l'URL
+                    #}
+                    if(getUrlParameter('model')){
+                        document.getElementById('model').value = getUrlParameter('model');
+                    }
                 })
             ;
         }
+
+        var getUrlParameter = function getUrlParameter(sParam) {
+            var sPageURL = window.location.search.substring(1),
+                sURLVariables = sPageURL.split('&'),
+                sParameterName,
+                i;
+
+            for (i = 0; i < sURLVariables.length; i++) {
+                sParameterName = sURLVariables[i].split('=');
+
+                if (sParameterName[0] === sParam) {
+                    return sParameterName[1] === undefined ? true : decodeURIComponent(sParameterName[1]);
+                }
+            }
+        };
 
         var modal = $('#filtre');
 
